--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
   "dependencies": {
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
-    "prop-types": "^15.7.2",
-    "styled-components": "^5.3.1"
+    "prop-types": "^15.7.2"
   }
 }
